--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
     </style>
   </head>
   <body>
-    <h1>Todo App On-premise: I made some changes again!!</h1>
+    <h1>Todo App AWS: I made some changes again!!</h1>
 
     <!-- Add Task Form -->
     <form method="post">
